# ChangeLog for net-nntp/inn
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-nntp/inn/ChangeLog,v 1.10 2007/04/17 23:02:29 philantrop Exp $

  17 Apr 2007; Wulf C. Krueger <philantrop@gentoo.org>
  +files/inn-2.4.3-berkdb45.patch, inn-2.4.3.ebuild:
  Fixed compatibility problems with sys-libs/db-4.4 and 4.5, fixes bug 174680.

  03 Mar 2007; Sven Wegener <swegener@gentoo.org> inn-2.4.3.ebuild:
  Add db location for bug #168519.

*inn-2.4.3 (11 Feb 2007)

  11 Feb 2007; Sven Wegener <swegener@gentoo.org> +inn-2.4.3.ebuild:
  Version bump, bug #135088. Fix certificate location in configuration files,
  bug #123316. Fix autotools handling, bug #159065. Fix obsolete head/tail
  invocations, bug #158293.

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  25 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> inn-2.4.1.ebuild:
  Use bindnow-flags function instead of -Wl,-z,now. Change root.root ownership
  to root:0.

  16 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> inn-2.4.1.ebuild:
  Remove --with-gnu-ld option, bug #108386.

  16 Sep 2005; Ciaran McCreesh <ciaranm@gentoo.org> ChangeLog:
  Converted to UTF-8, fixed encoding screwups

  23 Jan 2005; Sven Wegener <swegener@gentoo.org> inn-2.4.1.ebuild:
  Disable Tcl code because it is broken, bug #69240.

*inn-2.4.1 (17 Jan 2005)

  17 Jan 2005; Sven Wegener <swegener@gentoo.org> +metadata.xml,
  +files/2.4.1-berkdb.patch, +files/innd, +inn-2.4.1.ebuild:
  Moved from net-news/inn to net-nntp/inn.

  15 Oct 2004; David Holm <dholm@gentoo.org> inn-2.4.1.ebuild:
  Added to ~ppc.

  02 Oct 2004; Sven Wegener <swegener@gentoo.org> -inn-2.3.5.ebuild:
  Removed old ebuild.

  27 Sep 2004; Sven Wegener <swegener@gentoo.org> inn-2.4.1.ebuild:
  Added elibtoolize to src_unpack() because the included libtool is broken.
  Modified to not use lazy bindings.
