@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-nntp/inn/inn-2.4.3.ebuild,v 1.4 2007/04/17 23:02:29 philantrop Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nntp/inn/inn-2.4.3.ebuild,v 1.5 2007/04/22 15:49:53 jokey Exp $
 
 WANT_AUTOCONF="2.1"
 
@@ -9,9 +9,10 @@ inherit fixheadtails ssl-cert eutils libtool flag-o-matic autotools
 DESCRIPTION="The Internet News daemon, fully featured NNTP server"
 HOMEPAGE="http://www.isc.org/products/INN"
 SRC_URI="ftp://ftp.isc.org/isc/inn/${P}.tar.gz"
+
 SLOT="0"
 LICENSE="as-is BSD GPL-2"
-KEYWORDS="~amd64 ~ppc ~x86"
+KEYWORDS="~amd64 ~ppc x86"
 IUSE="ipv6 kerberos sasl ssl perl python berkdb inntaggedhash innkeywords"
 
 RDEPEND="virtual/mta
